WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282757
[unified-sources] fix issue with `ImageUtilities.h` and `ImageUtilitiesCG.cpp`
https://bugs.webkit.org/show_bug.cgi?id=282757
Summary
[unified-sources] fix issue with `ImageUtilities.h` and `ImageUtilitiesCG.cpp`
Antoine Quint
Reported
2024-11-07 06:55:27 PST
Adding a new file in a development branch identified some issues with missing headers in Source/WebCore/platform/graphics/ImageUtilities.h and Source/WebCore/platform/graphics/cg/ImageUtilitiesCG.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-07 06:55:43 PST
<
rdar://problem/139433497
>
Antoine Quint
Comment 2
2024-11-07 06:57:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36327
EWS
Comment 3
2024-11-07 10:56:55 PST
Committed
286292@main
(d162ce786667): <
https://commits.webkit.org/286292@main
> Reviewed commits have been landed. Closing PR #36327 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug