[unified-sources] fix issue with `ImageUtilities.h` and `ImageUtilitiesCG.cpp` https://bugs.webkit.org/show_bug.cgi?id=282757 rdar://139433497

Reviewed by Anne van Kesteren.

Adding a new file in a development branch identified some issues with
missing headers in `Source/WebCore/platform/graphics/ImageUtilities.h`
and `Source/WebCore/platform/graphics/cg/ImageUtilitiesCG.cpp`.

* Source/WebCore/platform/graphics/ImageUtilities.h:
* Source/WebCore/platform/graphics/cg/ImageUtilitiesCG.cpp:

Canonical link: https://commits.webkit.org/286292@main